# definable.ai

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
.claude/: CLAUDE.md  FIXER-SETUP.md  settings.json
.claude/agents/: api-explorer.md  code-simplifier.md  defineable-evaluator.md  issue-filer.md  issue-fixer.md  memory-keeper.md
.claude/commands/: commit-push-pr.md  evaluate.md  file-issue.md  fix-issue.md  memory.md  setup.md  smoke-test.md  sync-docs.md  verify.md
.claude/hooks/: post-task-review.sh  verify-before-stop.sh
.claude/hooks/review-tests/: review_agent.py  review_guardrail.py  review_knowledge.py  review_mcp.py  review_memory.py  review_model.py  review_skill.py  review_tool.py
.claude/hooks/scenarios/: scenario_agent_with_tools_and_memory.py  scenario_guardrails_and_middleware.py  scenario_knowledge_pipeline.py  scenario_structured_output.py
.claude/memory/: competitive-landscape-2026.md  evaluation-history.md  known-issues.md  project-profile.md  user-preferences.md
.claude/server/: .env.example  definable-fixer.service  fix-issue.sh  webhook.py
.claude/skills/definable-code-patterns/: SKILL.md
.claude/skills/definable-docs-writing/: SKILL.md
.claude/skills/intelligent-testing/: SKILL.md
.github/workflows/: ci.yml  docs.yml  fix-issue.yml  publish.yml
definable/: model_pricing.json  test.py
definable/common/: logger.py
definable/definable/: __init__.py  chunker.py  embedder.py  exceptions.py  filters.py  media.py  reranker.py  tokens.py
definable/definable/agent/: README.md  __init__.py  agent.py  cancellation.py  config.py  event_bus.py  events.py  loop.py  middleware.py  testing.py  toolkit.py
definable/definable/agents/: README.md  __init__.py  agent.py  config.py  middleware.py  testing.py  toolkit.py
definable/definable/auth/: README.md  __init__.py  allowlist.py  api_key.py  base.py  composite.py  jwt.py
definable/definable/browser/: __init__.py  base.py  config.py  seleniumbase_browser.py  toolkit.py
definable/definable/claude_code/: __init__.py  agent.py  bridge.py  parser.py  tool_server.py  transport.py  types.py
definable/definable/compression/: README.md  __init__.py  manager.py
definable/definable/guardrails/: README.md  __init__.py  base.py  composable.py  decorators.py  events.py
definable/definable/interfaces/: README.md  __init__.py  base.py  hooks.py  serve.py  session.py
definable/definable/knowledge/: README.md  __init__.py  base.py
definable/definable/mcp/: README.md  __init__.py  client.py  config.py  errors.py  prompts.py  protocol.py  resources.py  toolkit.py  types.py
definable/definable/memory/: README.md  __init__.py  config.py  distillation.py  manager.py  memory.py  retrieval.py  scorer.py  topics.py  types.py
definable/definable/model/: README.md  __init__.py  base.py  message.py  metrics.py  pricing.py  response.py  utils.py
definable/definable/models/: README.md  __init__.py  base.py  message.py  metrics.py  pricing.py  response.py  utils.py
definable/definable/reader/: README.md  __init__.py  audio.py  base.py  detector.py  models.py  registry.py
definable/definable/readers/: README.md  __init__.py  audio.py  base.py  registry.py  utils.py
definable/definable/reasoning/: README.md  step.py
definable/definable/replay/: README.md  __init__.py  compare.py  replay.py  types.py
definable/definable/research/: README.md  __init__.py  compressor.py  config.py  engine.py  gap_analyzer.py  knowledge_graph.py  planner.py  reader.py  synthesizer.py
definable/definable/run/: README.md  __init__.py  agent.py  base.py  requirement.py
definable/definable/runtime/: README.md  __init__.py  _dev.py  runner.py  server.py
definable/definable/skill/: README.md  __init__.py  base.py  markdown.py  registry.py
definable/definable/skills/: README.md  __init__.py  base.py  markdown.py  registry.py
definable/definable/tool/: README.md  (+3 more)
definable/desktop-bridge/: Package.swift  README.md
definable/docs/: docs.json  installation.mdx  introduction.mdx  quickstart.mdx
definable/examples/: README.md
definable/llm/: base.py
definable/tests/: conftest.py  pytest.ini
definable/tests_e2e/: __init__.py  conftest.py  pytest.ini  test_agent_basics.py  test_agent_tools.py  test_document_metadata.py  test_full_integration.py  test_knowledge_rag.py  test_memory_conversations.py  test_models_providers.py  test_readers_agent.py  test_readers_parsers.py
document/: __init__.py  base.py
document/chunking/: agentic.py  document.py  fixed.py  markdown.py  recursive.py  semantic.py  strategy.py
document/reader/: arxiv_reader.py  base.py  csv_reader.py  docx_reader.py  firecrawl_reader.py  json_reader.py  markdown_reader.py  pdf_reader.py  text_reader.py  url_reader.py  website_reader.py  youtube_reader.py
embedder/: __init__.py  aws_bedrock.py  azure_openai.py  fireworks.py  huggingface.py  ollama.py  openai.py  sentence_transformer.py  together.py  voyageai.py
traces/: 098341c6-808f-4a01-be02-f3f926542282.jsonl  12a26f7b-7f50-4f8e-b2e7-8366fe2af169.jsonl  1cd5cb15-dc23-4255-b835-526bf4f137f5.jsonl  1e1ca7e1-a08e-4996-a1d9-218037c303a8.jsonl  225f3870-6aff-49e1-a752-b67a0897ce8e.jsonl  49e81f51-83bd-47c7-91e3-b60ab06d89b2.jsonl  4eab3ece-2d1b-4892-883e-2d944637bd6c.jsonl  55aa68f1-276f-40ad-97de-967f24fa560d.jsonl  5dd3387d-79ba-4e13-a295-64ddd8a664cf.jsonl  8629cc54-881d-40e0-b432-bc9990fe4886.jsonl  8aa03e6e-18a7-4839-a5ba-8a8ae1e8eaaf.jsonl  a1524d5e-760a-4571-8f3b-af219aec671f.jsonl  a445ed59-19da-4b6f-87ba-a7c8a68d4748.jsonl  b2997bec-d73f-4b42-a726-43f18e38026c.jsonl  b34d2460-8bdb-487d-8f33-c62e92ae9d2a.jsonl  c4c6b34b-c3b1-4657-b31a-6a0b6b9ba15d.jsonl  f191d0d4-56a0-4074-9b00-7ed85c944333.jsonl  f4cf2e43-b116-4d33-be53-d3574c4598cc.jsonl  f8976a97-5f2c-45d6-8903-87ec58e37243.jsonl
ui-frontend/: index.html  package-lock.json  package.json  vite.config.ts
ui-frontend/scripts/: post-build.js
ui-frontend/src/: App.css  App.tsx  ChatWidget.css  ChatWidget.tsx  index.css  main.tsx  web-component.tsx
(+698 files in other folders)
