[project]
name = "definable"
version = "0.2.8"
description = "Production-grade AI agent framework with RAG, memory, tools, and multi-model support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "docstring-parser>=0.17.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "openai>=2.15.0",
    "packaging>=23.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "ruff>=0.15.0",
    "tiktoken>=0.12.0",
    "voyageai>=0.3.7",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3.0"]
signal = []  # signal-cli-rest-api is external; no pip dependency needed
interfaces = ["discord.py>=2.3.0"]  # convenience: all interface deps
readers = ["pypdf>=4.0.0", "python-docx>=1.0.0", "python-pptx>=1.0.0", "openpyxl>=3.1.0", "odfpy>=1.4.0", "striprtf>=0.0.26"]
serve = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
cron = ["croniter>=2.0.0"]
runtime = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0", "croniter>=2.0.0"]
jwt = ["pyjwt>=2.8.0"]
postgres-memory = ["asyncpg>=0.29.0"]
redis-memory = ["redis>=5.0.0"]
qdrant-memory = ["qdrant-client>=1.9.0"]
chroma-memory = ["chromadb>=0.5.0"]
mongodb-memory = ["motor>=3.3.0"]
pinecone-memory = ["pinecone>=5.0.0"]
mem0-memory = ["mem0ai>=0.1.0"]
mistral-ocr = ["mistralai>=1.0.0"]
mistral-ocr-images = ["mistralai>=1.0.0", "Pillow>=10.0.0"]
research = ["duckduckgo-search>=6.0.0", "curl-cffi>=0.7.0"]
# Vector DB backends
qdrant = ["qdrant-client>=1.9.0"]
chroma = ["chromadb>=0.5.0"]
pinecone = ["pinecone>=5.0.0"]
pgvector = ["psycopg[binary]>=3.1.0", "pgvector>=0.3.0"]
mongodb = ["pymongo>=4.0.0"]
redis = ["redis>=5.0.0", "redisvl>=0.3.0"]
anthropic = ["anthropic>=0.40.0"]
google = ["google-genai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
mistral = ["mistralai>=1.0.0"]
browser = ["seleniumbase>=4.32.0"]
desktop = ["websockets>=12.0"]

[tool.setuptools.package-data]
definable = ["skills/library/*.md"]

[tool.setuptools.packages.find]
where = ["definable"]

[tool.ruff]
# Extend the ruff.toml file in the same directory
extend = "ruff.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --tb=short -q"
markers = [
  "unit: Pure logic tests — no external calls, always run",
  "integration: Real API tests — require API keys and/or running services",
  "behavioral: Agent-level behavior tests — assert on outcomes not internals",
  "contract: ABC contract compliance — every implementation must pass",
  "regression: Snapshot-based regression tests — lock in known-good behavior",
  "slow: Tests that take >10 seconds",
  "openai: Tests requiring OPENAI_API_KEY",
  "deepseek: Tests requiring DEEPSEEK_API_KEY",
  "moonshot: Tests requiring MOONSHOT_API_KEY",
  "xai: Tests requiring XAI_API_KEY",
  "voyageai: Tests requiring VOYAGEAI_API_KEY",
  "cohere: Tests requiring COHERE_API_KEY",
  "telegram: Tests requiring TELEGRAM_BOT_TOKEN",
  "discord: Tests requiring DISCORD_BOT_TOKEN",
  "signal: Tests requiring SIGNAL_PHONE_NUMBER and SIGNAL_API_URL",
  "postgres: Tests requiring PostgreSQL with pgvector",
  "redis: Tests requiring Redis server",
  "qdrant: Tests requiring Qdrant server",
  "chroma: Tests requiring ChromaDB",
  "mongodb: Tests requiring MongoDB server",
  "pinecone: Tests requiring PINECONE_API_KEY",
  "mem0: Tests requiring MEM0_API_KEY",
  "mistral: Tests requiring MISTRAL_API_KEY",
  "anthropic: Tests requiring ANTHROPIC_API_KEY",
  "google: Tests requiring GOOGLE_API_KEY",
  "ollama: Tests requiring a local Ollama server",
  "perplexity: Tests requiring PERPLEXITY_API_KEY",
  "openrouter: Tests requiring OPENROUTER_API_KEY",
  "playwright: Tests requiring a real browser via Playwright",
  "desktop: Tests requiring the macOS Desktop Bridge app running",
]
